[tool.poetry]
name = "master-retrieval-augmented-generation-rag-systems"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
umap = "^0.1.1"
pypdf = "^4.3.1"
openai = "^1.43.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
